[gd_scene load_steps=6 format=2]

[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/game_stages/common/CountdownDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://meme_game/audio/vote_reverb.wav" type="AudioStream" id=3]
[ext_resource path="res://meme_game/contest/MemeContestResponseBubble.tscn" type="PackedScene" id=4]
[ext_resource path="res://meme_game/game_stages/common/MemeContestStage.gd" type="Script" id=5]

[node name="MemeContestStage" instance=ExtResource( 1 )]
script = ExtResource( 5 )
vote_prompt_audio = ExtResource( 3 )
contest_response_display_paths = [ NodePath("ResponseBubbleLeft"), NodePath("ResponseBubbleRight") ]

[node name="VotingTimer" type="Timer" parent="." index="2"]

[node name="CountdownDisplay" parent="." index="3" instance=ExtResource( 2 )]

[node name="ResponseBubbleLeft" parent="." index="4" instance=ExtResource( 4 )]
emphasis_scale = Vector2( 1.03, 1.03 )

[node name="ResponseBubbleRight" parent="." index="5" instance=ExtResource( 4 )]
flip_h = true
emphasis_scale = Vector2( 1.03, 1.03 )

[connection signal="timeout" from="VotingTimer" to="." method="_on_voting_timeout"]
